# shopvile_utils

./: .gitignore  main.py  pyproject.toml
.github/workflows/: build.yml
common/: __init__.py  constants.py  enums.py  exceptions.py  types.py  utils.py
modules/inventory_excluder/: __init__.py
modules/inventory_reader/: __init__.py  output.py  processors.py
ui/: __init__.py  app.py  constants.py  sidebar.py
ui/screens/: inventory_excluder_screen.py  inventory_reader_screen.py
ui/widgets/: __init__.py  browse.py
